[package]
name = "cargo-subcommand"
version = "0.6.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Library for creating cargo subcommands."
repository = "https://github.com/dvc94ch/cargo-subcommand"
license = "ISC"

[dependencies]
dunce = "1.0.1"
glob = "0.3.0"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
