[package]
name = "cargo-subcommand"
version = "0.7.0"
authors = ["David Craven <david@craven.ch>", "Marijn Suijten <marijn@traverseresearch.nl>"]
edition = "2018"
description = "Library for creating cargo subcommands."
repository = "https://github.com/dvc94ch/cargo-subcommand"
license = "ISC"

[features]
default = ["clap"]

[dependencies]
clap = { version = "3.1.6", optional = true, features = ["derive"] }
current_platform = "0.2.0"
dunce = "1.0.1"
glob = "0.3.0"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"

