[package]
name = "cargo-subcommand"
version = "0.12.0"
authors = ["David Craven <david@craven.ch>", "Marijn Suijten <marijn@traverseresearch.nl>"]
edition = "2021"
description = "Library for creating cargo subcommands."
repository = "https://github.com/rust-mobile/cargo-subcommand"
license = "ISC"

[features]
default = ["clap"]

[dependencies]
clap = { version = "4.0.15", optional = true, features = ["derive"] }
current_platform = "0.2.0"
dunce = "1.0.3"
glob = "0.3.0"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
